--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form action="index.html">
                 <img class="avatar" src="./Loginform/img/avatar.svg">
                 <h2>Welcome</h2>
-                <div class="input-div">
+                <div class="input-div one focus">
                     <div class="i">
                         <i class="fas fa-user"></i>
                     </div>
@@ -33,7 +33,7 @@
                 </div>
 
 
-                <div class="input-div">
+                <div class="input-div two">
                     <div class="i">
                         <i class="fas fa-lock"></i>
                     </div>
