--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
                     </div>
                     <div>
                         <h5>Password</h5>
-                        <input class="input" type="password">
+                        <input class="input" type="password" id="lihat">
                     </div>
                 </div>
                 <a href="#">Forgot Password</a>
                 <input type="submit" class="btn" value="Login">
+                <input type="checkbox" class="btn">Show Password
             </form>
         </div>
     </div>
